Fix Spring Boot 4 compatibility and verify build